@@ -20,6 +20,10 @@ pipeline {
         }
         stage('Build') {
             steps {
+                script {
+                    env.JAVA_OPTS = "-Xmx2048m"
+                    env.MAVEN_OPTS = "-Xmx2048m -XX:MaxPermSize=512m"
+                }
                 bat 'mvn clean install'
             }
         }
